--- a/.classpath
+++ b/.classpath
@@ -6,9 +6,9 @@
 	<classpathentry kind="src" output="target/scala-2.11/test-classes" path="src/test/java"/>
 	<classpathentry kind="con" path="org.scala-ide.sdt.launching.SCALA_CONTAINER"/>
 	<classpathentry exported="true" kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER"/>
-	<classpathentry kind="lib" path="/Users/amanj/.ivy2/cache/org.scala-lang.macro-paradise/scala-compiler/jars/scala-compiler-2.10.3-SNAPSHOT.jar"/>
-	<classpathentry kind="lib" path="/Users/amanj/.ivy2/cache/org.scala-lang.macro-paradise/scala-library/jars/scala-library-2.10.3-SNAPSHOT.jar"/>
-	<classpathentry kind="lib" path="/Users/amanj/.ivy2/cache/org.scala-lang.macro-paradise/scala-reflect/jars/scala-reflect-2.10.3-SNAPSHOT.jar"/>
-	<classpathentry kind="lib" path="/Users/amanj/.ivy2/cache/org.scala-lang.macro-paradise/jline/jars/jline-2.10.3-SNAPSHOT.jar"/>
+	<classpathentry kind="lib" path="/Users/amanj/.ivy2/cache/org.scala-lang.plugins/macro-paradise_2.10.2/jars/macro-paradise_2.10.2-2.0.0-SNAPSHOT.jar"/>
+	<classpathentry kind="lib" path="/Users/amanj/.ivy2/cache/org.scala-lang/scala-compiler/jars/scala-compiler-2.10.2.jar"/>
+	<classpathentry kind="lib" path="/Users/amanj/.ivy2/cache/org.scala-lang/scala-reflect/jars/scala-reflect-2.10.2.jar"/>
+	<classpathentry kind="lib" path="/Users/amanj/.ivy2/cache/org.scala-lang/jline/jars/jline-2.10.2.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
