Ignore TEX reproducible files

--- a/.gitignore
+++ b/.gitignore
@@ -68,3 +68,30 @@ Thumbs.db
 *~
 *.swp
 *.swo
+
+
+# TEX ignore
+*.aux
+*.glo
+*.idx
+*.log
+*.toc
+*.ist
+*.acn
+*.acr
+*.alg
+*.bbl
+*.blg
+*.dvi
+*.glg
+*.gls
+*.ilg
+*.ind
+*.lof
+*.lot
+*.maf
+*.mtc
+*.mtc1
+*.out
+*.synctex.gz
+*.pdf
