--- a/.project
+++ b/.project
@@ -1,5 +1,5 @@
 <projectDescription>
-  <name>lombrello</name>
+  <name>piuma</name>
   <buildSpec>
     <buildCommand>
       <name>org.scala-ide.sdt.core.scalabuilder</name>
